tests/ui/associated-consts/associated-const-dead-code.stderr
error: associated constant `BAR` is never used
  --> $DIR/associated-const-dead-code.rs:6:11
   |
LL | impl MyFoo {
   | ---------- associated constant in this implementation
LL |     const BAR: u32 = 1;
   |           ^^^
   |
note: the lint level is defined here
  --> $DIR/associated-const-dead-code.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to 1 previous error

